--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,11 @@
 /db/*.sqlite3-journal
 
 # Ignore all logfiles and tempfiles.
-/log/*.log
-/tmp
-=======
+/log
+/*.log
 tmp/
-<<<<<<< HEAD
+/tmp
 
-=======
+
 log/
 .DS_Store
